# passlocal

./: README.md  index.html  package-lock.json  package.json
Casks/: passlocal.rb
homebrew/: passlocal.rb
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  storage.rs
src/components/: ConfirmDialog.tsx  FolderForm.tsx  Layout.tsx  Modal.tsx  SecretCard.tsx  SecretForm.tsx  SecretList.tsx  SetupScreen.tsx  Sidebar.tsx  UnlockScreen.tsx  index.ts
src/lib/: api.ts
src/types/: index.ts
